// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI regression — output structure snapshots > \`mneme --help\` snapshot 1`] = `
"Usage: mneme [options] [command]

μνήμη — the memory layer of your codebase. Knows the WHY, the WHAT, the
WHERE-IT-BREAKS.

Options:
  -V, --version  >  output the version number
  --compliance <profile>  >  Cryptographic compliance profile (none | fips140). Refuses to start if profile not satisfied. (default: "none")
  -h, --help  >  display help for command

Commands:
  adversarial [options]  >  Meta-evaluate any AI client — Mneme generates probes mixing real history with subtle + wholesale lies; you paste them into your AI; we compute a trust grade based on which contradictions the AI catches.
  audit [options]  >  AI Session Audit — every AI-driven commit gets a trust certificate (vendor-neutral; works with any AI tool whose commits end up in \`git log\`)
  bot [options]  >  Auto-comment Mneme audit + atrophy + ghost results on PRs / MRs (GitHub · GitLab · Bitbucket — auto-detects CI environment).
  atrophy [options] [author]  >  Knowledge half-life clock — Ebbinghaus forgetting curve over (author × file) pairs. Shows who still remembers what, and where ghost-code risk is concentrated. Pass an author email to drill in, --file <path> for a per-file view.
  telepathy [options]  >  Latent collaboration network — pairs of authors who never co-author a commit but whose changes rhyme (Alice edits one part of a topic; Bob edits the other within hours; pattern repeats). Surfaces invisible teams that GitHub can't see.
  influence [options]  >  Cultural-alpha ranking — who writes the patterns everyone else copies (volume-independent: a 5-commit pattern-setter outranks a 500-commit copy-paster; analyzes TypeScript / JavaScript / Python / Go)
  lineage [options] <target>  >  Semantic ownership of code over time — whose interpretation of whose intent currently lives in this code (NOT git blame; use for review assignment + onboarding, NOT performance reviews). Pass a file path or file:funcName.
  nemesis [options]  >  Engineering friction detector — pairs of authors who consistently revert/rewrite each other's work (use for team formation, NOT performance reviews)
  nervous-system [options]  >  Mneme Nervous System — combined people-analytics report (cultural alphas + latent teams + atrophy heatmap + brain lobes + mini-passports). Terminal-renderable; --html / --pdf for the printable dossier.
  passport [options] [author]  >  Engineer passport — DNA + expertise + telepathic teammates + influence + atrophy in one dossier. Pass an author email or omit to auto-pick the top contributor.
  promise [options]  >  Promise-debt tracker — every "I'll fix later" / TODO / follow-up parsed into a ledger and verified against history (heuristic; treat as a starting list)
  karma [options]  >  TODO/FIXME debt ledger — every TODO added is a debit, every one removed is a credit. Open balance compounds with age.
  cognitive-twin|twin [options] <email>  >  Author-voice fingerprint — stylometric profile of how a contributor writes commits. Optional --rewrite '<subject>' rewrites in their voice. (Heuristic, no LLM.)
  heartbeat [options]  >  Codebase pulse — 20-axis MRI snapshot vs rolling 7-day baseline; flag any axis ≥ 2σ. Cron daily for continuous health observation. (v0.43 Holy Grail #1.)
  rewind [options] <ref>  >  Time-travel debug — reconstruct the working context of a single commit (surrounding commits, time-of-day, voice deviation, sandwich-mode markers). ✱ inferences are speculative. (v0.43 Holy Grail #2.)
  dna-fold [options]  >  Fold individual author DNAs into a team-DNA. Surfaces consensus / polarised / outliered features across the team. (v0.43 Holy Grail #3.)
  library|lib [options]  >  Manage the per-repo molecule library (.mneme/library.json) — the v0.42 Second-Brain. List entries, promote frequent plans to named aliases, annotate, prune.
  run [options] <alias-or-id>  >  Execute a molecule plan from the library by alias or 16-char id. Default --dry-run; pass --execute to actually run. Use --forbid-* flags for sandboxed runs.
  compose [options] <intent...>  >  Compile a natural-language intent into a runnable pipeline of registered atoms / molecules. v0.41 plans, v0.42 also feeds the library. See Wiki: Compose-And-Compiler.
  periodic-table|table [options] [id]  >  Browse Mneme's Element/Atom/Molecule catalog. Pass an id (e.g. \`mneme periodic-table git.log\`) for full detail. v0.40 MVP — see Wiki: Periodic-Table.
  groups [options]  >  Browse Mneme's 40+ commands grouped by intent (security / people / history / memory / originals).
  deps  >  Dependency-level security commands (OSV.dev / CVE / GHSA cross-reference).
  suppress [options] [id]  >  Suppress a vulnerability finding by id (.mneme/suppressions.json). Pass --list to see all, --remove to remove.
  show [options] <id>  >  Print full context for a vulnerability finding by its 8-char id (commit + diff + posterior breakdown + suggested actions).
  repo-mri|mri [options]  >  Repo MRI — 20-axis health diagnostic with z-scores against typical OSS repos. The fast 'what's weird about this repo' answer.
  completion <shell>  >  Print a shell-completion script for bash, zsh, fish, or powershell. Pipe to your completion file to enable tab-completion across every Mneme command.
  do [options] <query...>  >  Smart dispatcher — describe what you want, Mneme picks tools and runs them ('do find security issues' / 'do is the codebase healthy')
  htc-build [options]  >  Compress every commit + cluster + memoir into LLM-ready cache (10× smaller, paid once, free LLM ladder auto-detected)
  htc-stats [options]  >  Inspect HTC coverage + compression ratio (raw vs cached tokens)
  upgrade [options]  >  Update Mneme to latest — bypasses npm cache + diagnoses PATH conflicts (more reliable than \`npm install -g mneme-ai@latest\`)
  setup-free  >  30-second guided setup for full Q&A synthesis without paying — Ollama / Groq / OpenRouter free paths
  guard [options]  >  Pre-commit hook — auto-runs anomaly + vuln + secret-redaction checks on every commit (install once, forget it exists)
  init [options]  >  Initialize Mneme in the current repo (probes environment to recommend the best embedder)
  index [options]  >  Index commits, PRs, and embeddings — or analyze the existing index
  ask [options] <question...>  >  Ask the memory: "why does payment.ts use try/catch?"
  why [options] <target>  >  Why does this exist? Pass file:line, file:start-end, or just file
  status  >  Show memory + repo status
  doctor [options]  >  Probe the environment (Ollama, OpenAI, hardware), check Mneme version against npm registry, and recommend next steps
  counterfactual [options] <author-email>  >  Bayesian what-if simulation — drop one author's commits and re-compute atrophy + telepathy. Surfaces which files lose their last live expert and which latent pairs disappear. Bayesian, NOT a prediction; never use to evaluate a real person.
  org [options] [args...]  >  Cross-repo nervous system — register multiple repos under one org, then run telepathy + atrophy across all of them. Subcommands: init <name> | add <name> <path> | remove <name> <path> | list | status [name] | delete <name>. Default (no subcommand) runs cross-repo analysis on the first registered org.
  dashboard [options]  >  Open the Mneme Web Dashboard for the current repo (local-first; no upload).
  mcp [options]  >  Run as an MCP server, OR --install to auto-config Claude Code / Cursor / Continue
  webhook [options] <action>  >  Outgoing webhooks: add · list · remove · test · fire (events: audit.fail · forensics.cwe.high · atrophy.spike · court.guilty · federation.match)
  session [options] <action>  >  Persistent cross-AI session: save · resume · list · remove. Context follows you across Claude Code / Cursor / ChatGPT / Codex.
  constitution [options]  >  Synthesize the repo's living constitution (regret patterns · atrophy pairing · forensics rules · ADRs). AI tools auto-prepend via mneme.constitution.get MCP tool.
  ecosystem [options]  >  Dynamic MCP — detect ecosystems in your repo (Stripe, React, Postgres, etc.) and show which ecosystem-specific tools Mneme will spawn for this repo.
  bench [options]  >  AI-Memory-Bench — the first reproducible benchmark for 'AI memory layers'. Emit probes, score AI answers, render leaderboard.
  security [options] [action]  >  Security dashboard: status (default) · on · off · verify. Shows audit log, model checksums (TOFU), scrubber, and FIPS posture in one screen.
  audit-log [options] <action>  >  HMAC-SHA-256 tamper-evident audit log: enable · disable · status · verify · rotate · show. Compliance-grade (SOC2 / PCI-DSS / banking).
  key [options] <action>  >  Cryptographic key management: rotate (re-sign HMAC audit chain under fresh secret).
  learn [options] <action>  >  Self-learning engine: tick (run a learning cycle now) · status (show learned-state + audit trail)
  adapter [options] <vendor>  >  Export Mneme's tool catalog as OpenAI / Anthropic / Gemini / MCP function-calling format
  benchmark [options]  >  Run the vendor-neutral AI Memory Benchmark — grades any AI memory implementation across 24 standardized probes
  time-capsule [options]  >  Export a single-tarball snapshot of the repo's nervous system for handovers / new-hire onboarding
  daemon [options] <action>  >  Mneme daemon — background process that watches git activity + auto-reindexes
  court [options] [commit]  >  Mneme Court — 12-jury arbitration with cryptographic ruling PDF (preview, full implementation in v1.7.0)
  federation [options] <action>  >  Cross-repo Wisdom Federation — DP/k-anonymity signed signals (join · leave · status · contribute · query)
  git-install [options]  >  Install Mneme as a native git extension — enables \`git mneme <cmd>\` + optional hooks
  watch [options]  >  Wisdom Mutant — 24/7 daemon: re-index on commit, calibrate hourly, self-eval daily
  time-machine [options] <file>  >  Narrate a file's evolution as eras (birth, rewrite, firefight, plateau)
  premortem [options] <intent...>  >  Predict regret risk for a proposed change, grounded in your repo's failure history
  ghost [options]  >  Surface ghost code — half-finished features, stale TODOs, files born and forgotten
  dna [options] [author]  >  Extract Codebase DNA — a portable fingerprint of a contributor's style, hours, and file affinity
  drift [options]  >  Visualize topical drift — features → refactors → firefights → polish over time
  chronicle [options]  >  Auto-generate a chaptered narrative documentary of your codebase
  oracle [options]  >  Predict next-window co-edits and surface likely author collisions on the same file
  constellation [options]  >  Build a graph view of the repo — files as stars, authors as orbitals, commits as edges
  forensics  >  Applied forensic science for code: STR-loci attribution, vulnerability hunt, anomaly detection
  guardian [options]  >  24/7 self-healing engine — diagnose weaknesses + auto-fix safe actions
  cluster [options]  >  Semantic clustering of commit messages — find topic islands across history
  network [options]  >  Author network — semantic collaboration graph with co-edit + co-time + co-topic edges
  manage [options]  >  Engineering management dashboard — health, succession, skill matrix, trajectory
  export-bundle|bundle [options]  >  Export the universal bundle — DNA + drift + chronicle + oracle + constellation + clusters + network + manage + ghost
  advanced  >  Show advanced commands grouped by phase (hidden from main --help)
  whats-new|wn [options]  >  Show curated highlights of what's new in this Mneme version (mirrors mneme.whats_new MCP tool).
  welcome [options]  >  Show the install handoff: what's auto-enabled + how to opt out (mirror of mneme.welcome MCP tool).
  spore  >  Cross-machine lineage sync (git-backed).
  lin  >  MneMeiosis Lineage — session inheritance across AI agents and machines.
  nucleus  >  Infinity Wisdom Brain — persistent loop that grows DNA across sessions.
  inbox  >  Mneme's force-push channel — daemon + version-check + achievement notices waiting to surface to the user.
  antivirus|av  >  Antivirus -- scan AI drafts for hallucination strains + run the vaccine lab.
  tools [options]  >  List Mneme's full MCP tool catalog (mirror of mneme.capabilities).
  squad [options] <claim...>  >  Bot Squadron — spawn 6 specialized sub-agents to investigate ONE claim from 6 angles.
  health [options]  >  Single-screen health: version + lineage state + nucleus streaks.
  demo [options]  >  Showcase Mneme's wow-features in 60 seconds — synthesizes seed lineage + ticks nucleus + spawns bot squadron + shows DNA evolution.
  help [command]  >  display help for command

Advanced commands (Phase 2/3/4 + WILD ideas) are hidden from this help.
Run \`mneme advanced\` to see them.

"
`;

exports[`CLI regression — output structure snapshots > \`mneme advanced\` snapshot 1`] = `
"
  μνήμη  >  ·  Mneme — advanced commands
  ─────────────────────────────────────────────────────────────

  Phase 2 — semantic similarity
    entities  >  parse + embed every TS/JS/Python/Go symbol
    clones [--threshold]  >  surface near-duplicate functions

  Phase 3 — incident correlation
    correlate --source ...  >  join commits with incidents (pager / manual)
    blast <commit>  >  predict incidents likely to follow a commit
    palimpsest <file>:<line>  >  walk the causal chain of a single line
    conscience [files...]  >  risk-score a PR against history

  Wisdom Mutant Engine (Phase 4)
    feedback <id> up|down  >  record explicit feedback on a query
    calibrate  >  re-tune search knobs against feedback set

  Insights — the killer commands
    who-knows <topic>  >  verdict on who knows X (% confidence + backup + risk)
    decisions  >  auto-extract ADRs from commit messages
    stack-trace [--from F]  >  paste an error, get historical context per frame
    story <topic>  >  narrate the evolution of <topic> across acts
    dream  >  speculative ideas grounded in your patterns
    chat  >  multi-turn REPL over your repo's history

  Innovations (Sprint 4) — wisdom + world-class + uniqueness
    regret  >  commits shipped + immediately fixed/reverted (regret rate)
    bus-factor  >  files where one author owns ≥75% — fragility map
    paradox  >  architectural flip-flops (A → B → A patterns)
    commit-coach [--stdin]  >  pre-commit review: message + reviewers + warnings
    crystal-ball [--stdin]  >  predict CI/follow-up failure probability for staged diff

  Quant (Sprint 5) — Wall Street meets Git
    drawdown  >  worst losing streaks (firefighting periods)
    alpha --items F  >  Kelly-criterion allocation for technical debt
    backtest --samples F  >  validate any predictor against history
    black-swan  >  rare-but-catastrophic file patterns
    insider-trading  >  authors who fix bugs they introduced
    moneyball  >  undervalued contributors (high ROI, low LOC)
    greek  >  codebase Greeks (Δ Γ Θ) sensitivity
    correlation-matrix  >  hidden behavioral coupling between files
    implied-volatility  >  chaos predicted from commit message tone
    tax-loss-harvest  >  dead-code deletion candidates

  WILD — opinionated extras
    heal [--dry-run]  >  synthesize WHY notes for poor commit messages
    echo [--id|--query]  >  find past incidents resembling current
    runaway  >  files growing silently across many commits
    mirror  >  onboarding dossier (5 PRs, 3 people, 2 incidents)
    rumor  >  tribal phrases mentioned but never documented
    fossil  >  files deleted from HEAD but alive in history
    ledger --since ...  >  tamper-evident audit log (SOX/SOC2)
    adapt  >  mutant detector — recommend next 1-3 commands
    teach <target>  >  explain a folder/file in plain language
    genius <question>  >  multi-step LLM agent over Mneme commands

  Brand
    wisdom [-n <1..13>]  >  a meditation from the Mneme manifesto
    manifesto  >  the full canon

  Each command has its own --help with options and examples.
  Full design notes: WILD_IDEAS.md, ROADMAP.md.
"
`;

exports[`CLI regression — output structure snapshots > \`mneme ask --help\` snapshot 1`] = `
"Usage: mneme ask [options] <question...>

Ask the memory: "why does payment.ts use try/catch?"

Options:
  -k, --top-k <n>  >  number of results (default: 8)
  --json  >  machine-readable JSON output (default: false)
  --no-llm  >  skip LLM synthesis — extractive answer only
  --debug  >  show intent classification + raw scores (default:
                         false)
  --audit  >  refuse to answer below confidence floor or with
                         unverified citations (default: false)
  --audit-floor <level>  >  audit confidence floor: low | medium | high (default:
                         "medium")
  --stream  >  v0.23: emit speculative-reasoning events in real-time
                         (consider/accept/prune/verify) (default: false)
  -h, --help  >  display help for command
"
`;

exports[`CLI regression — output structure snapshots > \`mneme do --help\` snapshot 1`] = `
"Usage: mneme do [options] <query...>

Smart dispatcher — describe what you want, Mneme picks tools and runs them ('do
find security issues' / 'do is the codebase healthy')

Options:
  --json  >  structured output (default: false)
  -h, --help  >  display help for command
"
`;

exports[`CLI regression — output structure snapshots > \`mneme forensics anomaly --help\` snapshot 1`] = `
"Usage: mneme forensics anomaly [options]

Catch suspicious commits before merge (insider-threat / credential-compromise)

Options:
  --threshold <n>  >  deviation threshold to surface (0..4) (default: 0.9)
  --top <n>  >  show N findings (default: 10)
  --json  >  structured output (default: false)
  -h, --help  >  display help for command
"
`;

exports[`CLI regression — output structure snapshots > \`mneme guardian --help\` snapshot 1`] = `
"Usage: mneme guardian [options]

24/7 self-healing engine — diagnose weaknesses + auto-fix safe actions

Options:
  --watch  >  run forever, polling every --interval seconds (default:
                        false)
  --once  >  run a single pass and exit (default if --watch is
                        absent) (default: false)
  --interval <seconds>  >  poll interval in seconds (--watch only) (default: 300)
  --apply  >  actually apply auto-policy actions (otherwise
                        observe-only) (default: false)
  --max-iterations <n>  >  stop after N ticks (testing / cron-style)
  --json  >  structured JSON output (default: false)
  -h, --help  >  display help for command
"
`;

exports[`CLI regression — output structure snapshots > \`mneme htc-stats --help\` snapshot 1`] = `
"Usage: mneme htc-stats [options]

Inspect HTC coverage + compression ratio (raw vs cached tokens)

Options:
  --json  >  machine-readable output (default: false)
  -h, --help  >  display help for command
"
`;

exports[`CLI regression — output structure snapshots > \`mneme status\` structure (sections only) 1`] = `
"  ◉  Mneme Status
  ◆ Repo
  ◆ Memory
  ◆ Config"
`;

exports[`CLI regression — output structure snapshots > \`mneme wisdom -n 1\` snapshot 1`] = `
"
  ╭───────────────────────────────────────────╮
  │  meditation 1 of 13                                │
  ╰───────────────────────────────────────────╯

  On Memory and Intelligence

  An intelligence without memory is just guessing in a loop. The
  Greeks knew this — they made μνήμη the mother of the muses, not
  their student.
  Every AI assistant you use today is a Mnemosyne with amnesia.

  — Intelligence is the spark; memory is the fuel.

  see also:  >  mneme wisdom --all     ·     mneme wisdom -n <1..13>     ·     mneme manifesto
"
`;

exports[`CLI regression — output structure snapshots > unknown-command error snapshot 1`] = `
"error: unknown command 'nope-not-real'
"
`;
